[gd_scene load_steps=4 format=3 uid="uid://cp3nfrdd2uwoc"]

[ext_resource type="Script" path="res://Inventory/ItemDataUI.gd" id="1_cxlpc"]

[sub_resource type="CanvasTexture" id="CanvasTexture_yyeaj"]

[sub_resource type="LabelSettings" id="LabelSettings_758dt"]
font_size = 10

[node name="ItemDataUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cxlpc")

[node name="ImageTextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
texture = SubResource("CanvasTexture_yyeaj")
expand_mode = 3

[node name="StacksizeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 13.0
offset_right = 24.0
offset_bottom = 30.0
text = "999
"
label_settings = SubResource("LabelSettings_758dt")
